--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
+    "formik": "^2.2.6",
     "framer-motion": "^3.10.5",
     "next": "10.0.7",
+    "nookies": "^2.5.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-firebaseui": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
